--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
 		"omnipay/common": "~2.4"
 	},
 	"require-dev": {
-		"guzzle/guzzle": "^3.9",
+		"guzzlehttp/guzzle": "^6.5",
 		"omnipay/paypal": "~2.5",
 		"omnipay/dummy": "~2.1",
 		"omnipay/paymentexpress": "~2.1",
