--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,35 @@
 {
-	"name": "silverstripe/silverstripe-omnipay",
-	"description": "SilverStripe Omnipay Payment Module",
-	"type": "silverstripe-module",
-	"license": "BSD-3-Clause",
-	"keywords": ["silverstripe","payment","omnipay"],
-	"require": {
-		"silverstripe/framework": "~3.1",
-		"omnipay/common": "~2.4"
-	},
-	"require-dev": {
-		"guzzle/guzzle": "dev-fix-certificate",
-		"omnipay/paypal": "~2.5",
-		"omnipay/dummy": "~2.1",
-		"omnipay/paymentexpress": "~2.1",
+    "name": "silverstripe/silverstripe-omnipay",
+    "description": "SilverStripe Omnipay Payment Module",
+    "type": "silverstripe-module",
+    "license": "BSD-3-Clause",
+    "keywords": [
+        "silverstripe",
+        "payment",
+        "omnipay"
+    ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/piotrulka/guzzle3/"
+        }
+    ],
+    "require": {
+        "silverstripe/framework": "~3.1",
+        "omnipay/common": "~2.4"
+    },
+    "require-dev": {
+        "guzzle/guzzle": "dev-fix-certificate",
+        "omnipay/paypal": "~2.5",
+        "omnipay/dummy": "~2.1",
+        "omnipay/paymentexpress": "~2.1",
         "omnipay/tests": "^2.0"
     },
-	"extra": {
-		"installer-name": "omnipay"
-	},
+    "extra": {
+        "installer-name": "omnipay"
+    },
     "suggest": {
         "bummzack/silverstripe-omnipay-ui": "Adds UI Components to manage payments in the SilverStripe CMS."
-    }
+    },
+    "minimum-stability": "dev"
 }
