Added repository for omnipay

--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,15 @@
         {
             "type": "vcs",
             "url": "https://github.com/piotrulka/guzzle3/"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/piotrulka/omnipay-common/"
         }
     ],
     "require": {
         "silverstripe/framework": "~3.1",
-        "omnipay/common": "~2.4"
+        "omnipay/common": "dev-fix-certificate,"
     },
     "require-dev": {
         "guzzle/guzzle": "dev-fix-certificate",
