--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     ],
     "require": {
         "silverstripe/framework": "~3.1",
-        "omnipay/common": "dev-fix-certificate,"
+        "omnipay/common": "dev-fix-certificate"
     },
     "require-dev": {
         "guzzle/guzzle": "dev-fix-certificate",
